--- a/new.html
+++ b/new.html
@@ -18,7 +18,7 @@
       <center><h1>CLOG_ONLINE STORE </h1></center>  
        
     <ul><center>
-      <a href="#Shoes">ShoeS_</a>
+      <a href=".//basic.html">ShoeS_</a>
       <a href="#Sandales">Sandales_ </a>
       <a href="#Sunglasses">Sunglasses </a></center>
     </ul>
